--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.learn</groupId>
@@ -39,7 +37,8 @@
         <module>hello-world</module>
         <module>thread-RAM-location</module>
         <module>thread-state-validate</module>
-    </modules>
+        <module>guava-learn</module>
+  </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
