--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>thread-RAM-location</module>
         <module>thread-state-validate</module>
         <module>guava-learn</module>
+        <module>feign</module>
   </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
@@ -317,26 +318,6 @@
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
-                <executions>
-                    <execution>
-                        <id>pre-test</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>post-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
 
