--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>thread-state-validate</module>
         <module>guava-learn</module>
         <module>feign</module>
+        <module>spring-framework</module>
   </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
