--- a/java-unit-test/pom.xml
+++ b/java-unit-test/pom.xml
@@ -62,6 +62,14 @@
                 </executions>
                 <version>3.1.0</version>
             </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>8</source>
+              <target>8</target>
+            </configuration>
+          </plugin>
         </plugins>
 
     </build>
