--- a/spring-boot-actuator/application/pom.xml
+++ b/spring-boot-actuator/application/pom.xml
@@ -25,6 +25,15 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-consul-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+    </dependency>
+
     <!-- required by actuator -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
