--- a/spring-boot-actuator/application/src/main/resources/application.yml
+++ b/spring-boot-actuator/application/src/main/resources/application.yml
@@ -2,9 +2,52 @@
 # global config
 spring:
   application:
-    name: spring-boot-actuator.app
+    name: spring-consul-app
   jackson:
     default-property-inclusion: non_null
+  config:
+    # To change the connection properties of Consul Config either set spring.cloud.consul.host and spring.cloud.consul.port or add the host/port pair to the spring.config.import statement such as, spring.config.import=optional:consul:myhost:8500. The location in the import property has precedence over the host and port propertie.
+    # import: 'optional:consul:'
+    # Removing the optional: prefix will cause Consul Config to fail if it is unable to connect to Consul
+    import: 'optional:consul:'
+  cloud:
+    consul:
+      host: 127.0.0.1
+      port: 8500
+      discovery:
+        instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+        enabled: true
+        tags: ['spring-boot-actuator']
+        metadata:
+          author: zhang.zzf
+        # health check
+        register-health-check: true
+        health-check-path: "/actuator/health" # default
+        health-check-interval: 10s
+        health-check-timeout: 1s
+      config:
+        enabled: true # default
+        format: key_value
+        prefixes: [config] # consul用于存储配置的文件夹根目录名为config
+        # sets the folder name used by all applications
+        # /config/application/data 中的配置可以配所有服务读取
+        default-context: application # default
+        profile-separator: '::' # default
+        # format: yaml
+        # data-key: data # default
+        watch:
+          enabled: true
+
+# 假设 consul 有以下配置。数字越小，配置优先级越高：
+# 1. config/spring-consul-app::dev/data
+# 2. config/spring-consul-app/data
+# 3. config/application::dev/data
+# 4. config/application/data
+
+# 指定 `-Dspring.profiles.active=dev` 加载 1,2,3,4 配置
+# 启动没有指定 profile，加载 2,4 配置
+
+
 logging:
   level:
     root: info
